Informacion util en el README.md